[package]
name = "cartesien_tree"
version = "0.1.0"
edition = "2021"

[dependencies]
#mimalloc = { version = "*" }
fastrand ={ version = "2", optional = true}

[profile.release]
strip = true
panic = "abort"
lto = true
codegen-units = 1

[profile.perf-debug]
inherits = "release"
debug = true
lto = true
strip=false
panic = 'abort'

[features]
benchmark = ["dep:fastrand"]
