[package]
name = "cartesien_tree"
version = "0.1.0"
edition = "2021"

[dependencies]
fastrand ={ version = "2", optional = true}
mimalloc = { version = "*", optional = true}

[profile.release]
strip = true
panic = "abort"
lto = true
codegen-units = 1

[profile.perf-debug]
inherits = "release"
debug = true
lto = true
strip=false
panic = 'abort'

[features]
benchmark = ["dep:fastrand"]
mimalloc = ["dep:mimalloc"]
